# SD-JCom

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: jcommit-client.rs  main.rs  oauth-client.rs
client/static/: index.html
json-commit/: Cargo.toml  test_benchmarks.py  test_proof_gen.py  test_proof_size.py  test_verify_benchmarks.py
json-commit/src/: ast.rs  proof.rs
json-commit/src/commit/: commitment.rs  generator.rs  mod.rs  path-tree.rs
json-commit/test/: JSON-test.rs
server/: Cargo.toml  lan_wan_bench.py
server/src/: main.rs
