[package]
name = "json-commit"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

thiserror = "2"

curve25519-dalek = { version = "4", features = ["rand_core", "digest"] }
rand_core = { version = "0.6", features = ["getrandom"] }

sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }
async-recursion = "1.1.1"
rayon = "1.10"

[dev-dependencies]
sd-jwt-rs = { git = "https://github.com/openwallet-foundation-labs/sd-jwt-rust.git", tag = "v0.7.1" }
jsonwebtoken = "9"
pairing_crypto = { git = "https://github.com/mattrglobal/pairing_crypto.git", branch = "master" }
k256 = { version = "0.13" }
elliptic-curve = { version = "0.13" }
# For MSM optimization comparison (Pippenger)
ark-ec = { version = "0.4", features = ["parallel"] }
ark-ff = { version = "0.4", features = ["parallel"] }
ark-std = { version = "0.4", features = ["parallel"] }
ark-bls12-381 = "0.4"

[[test]]
name = "JSON-test"
path = "test/JSON-test.rs"
