[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
json-commit = { path = "../json-commit" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22.1"
k256 = { version = "0.13.4", features = ["ecdsa"] }
curve25519-dalek = { version = "4", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["std"] }
